--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>嵌入 Wix Studio 页面</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SierraSun's Work</title>
     <style>
       /* 全屏显示 iframe */
       body { margin: 0; overflow: hidden; }
